# camembert-bio

./: .gitignore  LICENSE  README.md  meditron_benchmark_test.py  pyproject.toml  qa_test.py  qa_test_single.py  requirements.txt  run_llm_qa_benchmark.py  test_chat_template.py  test_ner.py
camembert_bio/: main.py  test.py
camembert_bio/config/: default.yaml
camembert_bio/config/model/: mdeberta-bio.yaml  (+2 more)
camembert_bio/data_handling/: ner_dataset.py  nested_ner_dataset.py
camembert_bio/evaluation/: evaluate_offsets.py
camembert_bio/models/: ner_bert.py  nested_ner_bert.py
camembert_bio/utils/: offsets_evaluation.py
config/: default.yaml
config/dataset/: bc5cdr.yaml  emea.yaml  jnlpba.yaml  medline.yaml  ncbi.yaml
config/model/: base.yaml  camembert-base.yaml  camembert-bio.yaml  camembert-large.yaml  drbert.yaml  mdeberta-bio.yaml  mdeberta.yaml  phi-2.yaml
config/trainer/: default.yaml
slurm/: run_experiments.sbatch  run_experiments_llm.sbatch  run_experiments_llm_a100.sbatch
slurm/experiment_logs/: exp_11807441.out  exp_11807442.out  exp_11807448.out  exp_11807449.out  exp_11807450.out  exp_11807451.out  exp_11807461.out  exp_11807464.out  exp_11807466.out  exp_11807470.out  exp_11807473.out  exp_11807474.out  exp_11807476.out  exp_11807477.out  exp_11807480.out  exp_11807488.out  exp_11807489.out  exp_11807490.out  exp_11807492.out  exp_11807493.out  exp_11807496.out  exp_11807498.out  llm_12160611.out  llm_12161247.out  llm_12161942.out  llm_12231697.out
tests/: test_entities_to_offsets.py  test_nested_preprocessor.py  test_preprocessor.py
(+3 files in other folders)
