[tool.poetry]
name = "camembert-bio"
version = "0.1.0"
description = ""
authors = ["rian-t <rian.touchent@inria.fr>"]
license = "MIT"
readme = "README.md"
packages = [{include = "camembert_bio"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.34.0"
datasets = "^2.14.5"
hydra-core = "^1.3.2"
wandb = "^0.15.12"
evaluate = "^0.4.0"
seqeval = "^1.2.2"
stanza = "^1.6.1"
lightning = "^2.0.1"
torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
ipykernel = "^6.25.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
